--- a/muapp/templates/virtual_fit_upload.html
+++ b/muapp/templates/virtual_fit_upload.html
@@ -4,8 +4,8 @@
     <link href="https://releases.transloadit.com/uppy/v3.6.1/uppy.min.css" rel="stylesheet">
 {% endblock style %}
 {% block nav %}
-    <a href="{% url 'index' %}" class="nav-item nav-link jamsil">Home</a>
-    <a href="{% url 'about' %}" class="nav-item nav-link jamsil">소개</a>
+    <a href="{% url 'index' %}" class="dropdown-item nav-link jamsil">Home</a>
+    <a href="{% url 'about' %}" class="dropdown-item nav-link jamsil">소개</a>
 {% endblock nav%}
 
 {% block content %}
