--- a/muapp/templates/virtual_fit_video.html
+++ b/muapp/templates/virtual_fit_video.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block nav %}
-    <a href="{% url 'about' %}" class="nav-item nav-link jamsil">소개</a>
+    <a href="{% url 'about' %}" class="dropdown-item nav-link jamsil">소개</a>
 {% endblock %}
 {% block closet %}
     <a href="#" class="nav-link dropdown-toggle active jamsil" data-bs-toggle="dropdown">옷장</a>
