--- a/muapp/templates/virtual_fit_photo_result.html
+++ b/muapp/templates/virtual_fit_photo_result.html
@@ -32,35 +32,68 @@
             </div>
             <br>
             {%comment%}
-            {%endcomment%}
-                        
+
+            
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    {% for r in result_vition%}
+                        {% if r.row_number == 1%}
+                            <div class="carousel-item active">
+                                <img src="..." class="d-block w-100" alt="...">
+                            </div>
+                        {% else %}
+                            <div class="carousel-item">
+                                <img src="..." class="d-block w-100" alt="...">
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                {% if result_vition.count != 1 %}
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                    </button>
+                {%else%}
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                    </button>
+                {%endif%}
+            </div>
+            {%endcomment%}            
             <div class="tab-content wow fadeIn" data-wow-delay="0.1s">
                 <div id="tab-1" class="tab-pane fade show p-0 active">
                     <div class="row g-4">
-                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" > 
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 {% for r in result_vition%}
                                     {% if r.row_number == 1%}
-                                        <div class="carousel-item active" >
+                                        <div class="carousel-item active">
                                             <img src="{{r.image.url}}" class="d-block w-50 mx-auto" alt="...">
+                                            <div class="carousel-caption d-none d-md-block text-primary">
+                                                <p>row_number 값: {{r.row_number}}</p>
+                                            </div>
                                         </div>
                                     {% else %}
-                                        <div class="carousel-item" >
+                                        <div class="carousel-item">
                                             <img src="{{r.image.url}}" class="d-block w-50 mx-auto" alt="...">
+                                            <div class="carousel-caption d-none d-md-block text-primary">
+                                                <p>row_number 값: {{r.row_number}}</p>
+                                            </div>
                                         </div>
                                     {% endif %}
                                 {% endfor %}
                             </div>
                             {% if result_vition.count != 1 %}
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
-                            </button>
-                            {% endif %}
+                                </button>
+                            {%endif%}
                         </div>
                     </div>
                 </div>
