--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -114,7 +114,7 @@
         </div>
         {% else %}
         <div id="getAnswerBtn" class="d-flex justify-content-center col wow fadeIn" data-wow-delay="0.1s">
-            <div class="d-flex col-sm-8 col-md-6 col-lg-4 col-xl-3 justify-content-center">
+            <div class="d-flex col-xl-3 justify-content-center">
                 <button class="btn btn-primary btn-lg jamsil py-sm-3 mt-3 rounded-pill w-100 shadow" onclick="location.href='{% url 'login' %}'">Clothify의 추천!</button>
             </div>
         </div>
